[package]
name = "rise"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "indexer"
path = "src/indexer.rs"
 
[[bin]]
name = "rpc-server"
path = "src/rpc_server.rs"
 
[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "migrate", "macros"] }
reqwest = { version = "0.11", features = ["json"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
hex = "0.4"
alloy-primitives = { version = "0.7", features = ["serde"] }
futures = "0.3"
tower-http = { version = "0.5", features = ["cors", "trace"] }
clap = { version = "4", features = ["derive", "env"] }
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
url = "2"